@@ -8,3 +8,4 @@ dir = bin
 type = markdown
 filename = README.md
 location = root
+source_filename = lib/Datahub/Factory/Introduction.pod
